completed more exercises

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -62,8 +62,14 @@
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalAge = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0)
+    console.log(totalAge)
 
     // 5. Sort the inventors by years lived
+    const oldest = inventors.sort((a,b) => (a.passed-a.year) > (b.passed-b.year) ? 1:-1)
+    console.table(oldest)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -71,6 +77,10 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alphabetically = people.sort((current, last) => {
+      const [aLast, aFirst] = last.split(', ')
+      const [bLast, bFirst] = current.split(', ')
+    })
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
